--- a/src/TabKeeper.UI.Wasm/assets/app.scss
+++ b/src/TabKeeper.UI.Wasm/assets/app.scss
@@ -1,6 +1,7 @@
 @import "./_buttons.scss";
 @import "./_cards.scss";
 @import "./_details.scss";
+@import "./_dialog.scss";
 @import "./_icons.scss";
 @import "./_material-input.scss";
 @import "./_preferences.scss";
