Fix settings page

--- a/src/TabKeeper.UI.Wasm/Pages/SettingsPage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/SettingsPage.razor
@@ -11,8 +11,6 @@
 <PreferenceScreenPage Preference="Preferences.Screen" />
 
 @code {
-    public static ConfigurationManager Configuration { get; } = new();
-
     protected override void OnInitialized()
     {
         ShellLayout.Context = new() { Title = "settings.title" | translate };
@@ -26,6 +24,6 @@
             .Subscribe(p => ThemeModule.UpdateDom())
             .DisposeWith(this);
 
-        Preferences.Screen.Initialize(Configuration);
+        Preferences.Screen.Initialize(manager);
     }
 }
