--- a/src/TabKeeper.UI.Wasm/Components/DropdownContent.razor
+++ b/src/TabKeeper.UI.Wasm/Components/DropdownContent.razor
@@ -1,4 +1,5 @@
-﻿@inherits CoreComponent
+﻿@using Core.Common
+@inherits CoreComponent
 
 <Transition AsComponent="typeof(Fragment)"
             Enter="transition ease-out duration-100"
@@ -8,7 +9,7 @@
             LeaveFrom="transform opacity-100 scale-100"
             LeaveTo="transform opacity-0 scale-95"
             Context="transition">
-    <MenuItems class="@Css.Class("absolute space-y-1 rounded-md bg-tertiary-container shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none", this.Class(), GetPosition(Anchor), transition.CssClass)">
+    <MenuItems class="@Bl.Class("absolute space-y-1 rounded-md bg-tertiary-container shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none", this.Class(), GetPosition(Anchor), transition.CssClass)">
         @ChildContent
     </MenuItems>
 </Transition>
@@ -20,7 +21,7 @@
     [Parameter]
     public Anchor Anchor { get; set; } = Anchor.Bottom | Anchor.Left;
 
-    private static string GetPosition(Anchor anchor) => @Css.Class(
+    private static string GetPosition(Anchor anchor) => @Bl.Class(
         ("bottom-full mb-2", anchor.HasFlag(Anchor.Top)),
         ("top-full mt-2", anchor.HasFlag(Anchor.Bottom)),
         ("left-0", anchor.HasFlag(Anchor.Left)),
