--- a/src/TabKeeper.UI.Wasm/Pages/Tabs/TabPage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Tabs/TabPage.razor
@@ -1,4 +1,5 @@
-﻿@using Ignis.Components
+﻿@using Core.Common
+@using Ignis.Components
 @using Ignis.Components.HeadlessUI
 
 @page "/tab/{Id}"
@@ -82,12 +83,12 @@
             </div>
 
             <TabList class="flex gap-2">
-                <Tab Context="tab" class="@Css.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 0 ? "btn-primary" : "btn-secondary")">
+                <Tab Context="tab" class="@Bl.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 0 ? "btn-primary" : "btn-secondary")">
                     <FaSolidBasketShopping class="icon-sm" />
                     <span>@("products" | translate)</span>
                 </Tab>
 
-                <Tab Context="tab" class="@Css.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 1 ? "btn-primary" : "btn-secondary")">
+                <Tab Context="tab" class="@Bl.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 1 ? "btn-primary" : "btn-secondary")">
                     <FaSolidPeopleGroup class="icon-sm" />
                     <span>@("people" | translate)</span>
                 </Tab>
