Chore/lib migrations (#5)
* Move to Noctilocus from Annular.Translate

* Update Core

* Refactor Modal to use Html dialog and also add missing translations

* Fix settings page

* Upgrade to tailwind v4

* Add missing translations and remove dialog outlet

* Refactor themes

* Remove Ignis Utils and Reactivity

--- a/src/TabKeeper.UI.Wasm/Pages/People/Components/PersonForm.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/People/Components/PersonForm.razor
@@ -1,15 +1,14 @@
 ﻿@inherits CoreComponent
 @inject TranslateService translate
 
-<EditForm Model="Person" OnValidSubmit="ValidSubmit" @attributes="Attributes" class="@this.Class("space-y-2")">
+<EditForm Model="Person" OnValidSubmit="ValidSubmit" @attributes="Attributes" id="@Id" class="@this.Class("space-y-2")">
     <FluentValidator Validator="Person.Validator" />
 
-    <div class="material-input">
+    <div class="material">
         <label for="Person.Name">@("name" | translate)</label>
         <InputText @bind-Value="Person.Name" placeholder="@("name" | translate)" />
+        <ValidationMessage For="() => Person.Name" />
     </div>
-    <ValidationMessage For="() => Person.Name" />
-
 </EditForm>
 
 @code {
