--- a/src/TabKeeper.UI.Wasm/Pages/Tabs/TabPage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Tabs/TabPage.razor
@@ -1,4 +1,8 @@
-﻿@page "/tab/{Id}"
+﻿@using Core.Common
+@using Ignis.Components
+@using Ignis.Components.HeadlessUI
+
+@page "/tab/{Id}"
 @inherits CoreRxComponent<TabViewModel>
 @inject StorageDb db
 @inject TranslateService translate
@@ -69,26 +73,22 @@
                     <p class="font-semibold">@ViewModel.People.Items.Sum(x => x.Total).ToString("0.00")</p>
                 </div>
 
-                @* <Button class="btn btn-tertiary p-2">
-                    <FaSolidPen class="icon" />
-                </Button> *@
-
-                <Button class="btn btn-tertiary p-2" OnClick="() => NewPersonModal.Show()">
+                <Button class="btn btn-tertiary p-2" OnClick="() => NewPersonModal.Open()">
                     <FaSolidUserPlus class="icon" />
                 </Button>
 
-                <Button class="btn btn-tertiary p-2" OnClick="() => NewProductModal.Show()">
+                <Button class="btn btn-tertiary p-2" OnClick="() => NewProductModal.Open()">
                     <FaSolidCartPlus class="icon" />
                 </Button>
             </div>
 
             <TabList class="flex gap-2">
-                <Tab Context="tab" class="@Css.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 0 ? "btn-primary" : "btn-secondary")">
+                <Tab Context="tab" class="@Bl.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 0 ? "btn-primary" : "btn-secondary")">
                     <FaSolidBasketShopping class="icon-sm" />
                     <span>@("products" | translate)</span>
                 </Tab>
 
-                <Tab Context="tab" class="@Css.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 1 ? "btn-primary" : "btn-secondary")">
+                <Tab Context="tab" class="@Bl.Class("btn gap-2 font-bold grow h-11", tabGroup.SelectedIndex is 1 ? "btn-primary" : "btn-secondary")">
                     <FaSolidPeopleGroup class="icon-sm" />
                     <span>@("people" | translate)</span>
                 </Tab>
@@ -98,7 +98,7 @@
 </div>
 
 @* Product Modal *@
-<Modal BackdropDismiss IsOpenWhen="SelectedProduct.IsNotNull()">
+<Modal IsOpenWhen="SelectedProduct.IsNotNull()">
     @{
         var product = SelectedProduct.Value!;
     }
@@ -123,7 +123,7 @@
 
 @* Add Product Modal *@
 <Modal @ref="NewProductModal" BackdropDismiss class="self-center flex flex-col gap-2">
-    <ProductForm id="new-product-form" OnValidSubmit="OnValidProduct" OnValidReset />
+    <ProductForm Id="new-product-form" OnValidSubmit="OnValidProduct" OnValidReset />
     <div class="flex flex-row-reverse gap-2">
         <Button class="btn btn-primary gap-2 grow" type="submit" form="new-product-form">
             <FaSolidPlus class="icon-sm" />
@@ -131,22 +131,22 @@
         </Button>
         <Button class="btn btn-cancel gap-2 grow" OnClick="() => NewProductModal.Close()">
             <FaSolidX class="icon-xs" />
-            <span>@("close" | translate)</span>
+            <span>@("cancel" | translate)</span>
         </Button>
     </div>
 </Modal>
 
 @* Add Person Modal *@
 <Modal @ref="NewPersonModal" BackdropDismiss class="self-center flex flex-col gap-2">
-    <PersonForm id="new-person-form" OnValidSubmit="OnValidPerson" OnValidReset />
-    <div class="flex flex-row-reverse gap-2">
+    <PersonForm Id="new-person-form" OnValidSubmit="OnValidPerson" OnValidReset />
+    <div class="mt-4 flex flex-row-reverse gap-2">
         <Button class="btn btn-primary gap-2 grow" type="submit" form="new-person-form">
             <FaSolidPlus class="icon-sm" />
             <span>@("add" | translate)</span>
         </Button>
         <Button class="btn btn-cancel gap-2 grow" OnClick="() => NewPersonModal.Close()">
             <FaSolidX class="icon-xs" />
-            <span>@("close" | translate)</span>
+            <span>@("cancel" | translate)</span>
         </Button>
     </div>
 </Modal>
@@ -159,9 +159,6 @@
 
     private Modal NewProductModal { get; set; } = null!;
     private Modal NewPersonModal { get; set; } = null!;
-
-    [Parameter]
-    public string Id { get; set; } = string.Empty;
 
     private void OnValidProduct(TabProduct product)
     {
